fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,23 @@ body{
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
-    word-spacing: 1rem;
 }
 
 
 ::before, ::after{
     box-sizing: border-box;
 }
+ul{
+    justify-content: left;
+
+}
 li{
     /* list-style: none; */
     line-height: 25px;
-    text-align: justify;
+    /* text-align: justify; */
     font-size: 16px;
     color: var(--text-black-700);
+    justify-content: space-around;
 }
 
 .section{
